<resources>
    <string name="app_name">CodeMail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tasmia Niazi</string>
    <string name="nav_header_subtitle">tasmia_91@hotmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>


    <string name="menu_home">Home</string>
    <string name="menu_inbox">Inbox</string>
    <string name="menu_sentMail">Sent Mail</string>
    <string name="menu_outbox">Outbox</string>

    <string name="nav_lloyds">Lloyds</string>
    <string name="nav_mmu">MMU</string>



</resources>
