<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.assignment.codemail.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_inbox"
        android:name="com.assignment.codemail.ui.inbox.Inbox"
        android:label="@string/menu_inbox"
        tools:layout="@layout/inbox_fragment" />

    <fragment
        android:id="@+id/nav_sentMail"
        android:name="com.assignment.codemail.ui.sentMail.SentMail"
        android:label="@string/menu_sentMail"
        tools:layout="@layout/sent_mail_fragment" />

    <fragment
        android:id="@+id/nav_outbox"
        android:name="com.assignment.codemail.ui.outbox.Outbox"
        android:label="@string/menu_outbox"
        tools:layout="@layout/outbox_fragment" />

</navigation>